@@ -30,6 +30,7 @@ version <next>:
 - libvmaf video filter
 - Dolby E decoder and SMPTE 337M demuxer
 - unpremultiply video filter
+- tlut2 video filter
 
 version 3.3:
 - CrystalHD decoder moved to new decode API
